@@ -172,9 +172,9 @@ public class StateCompiler
 
         Class<? extends AccumulatorStateSerializer> serializerClass = defineClass(definition, AccumulatorStateSerializer.class, callSiteBinder.getBindings(), classLoader);
         try {
-            return (AccumulatorStateSerializer<T>) serializerClass.newInstance();
+            return (AccumulatorStateSerializer<T>) serializerClass.getConstructor().newInstance();
         }
-        catch (InstantiationException | IllegalAccessException e) {
+        catch (ReflectiveOperationException e) {
             throw new RuntimeException(e);
         }
     }
@@ -186,7 +186,7 @@ public class StateCompiler
         Type type;
         if (fields.size() > 1) {
             List<Type> types = fields.stream().map(StateField::getSqlType).collect(toImmutableList());
-            type = new RowType(types, Optional.empty());
+            type = RowType.anonymous(types);
         }
         else if (fields.size() == 1) {
             type = getOnlyElement(fields).getSqlType();
@@ -400,9 +400,9 @@ public class StateCompiler
 
         Class<? extends AccumulatorStateFactory> factoryClass = defineClass(definition, AccumulatorStateFactory.class, classLoader);
         try {
-            return (AccumulatorStateFactory<T>) factoryClass.newInstance();
+            return (AccumulatorStateFactory<T>) factoryClass.getConstructor().newInstance();
         }
-        catch (InstantiationException | IllegalAccessException e) {
+        catch (ReflectiveOperationException e) {
             throw new RuntimeException(e);
         }
     }
